--- a/index.html
+++ b/index.html
@@ -1,75 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <title>Entrega esperada</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <img src="https://dummyimage.com/100x100/c5c6c7/fff" alt="">
-        <nav>
-            <ul class="menu">
-                <li class="itemMenu">item</li>
-                <li class="itemMenu">item</li>
-                <li class="itemMenu">item</li>
-            </ul>
-        </nav>
+      <img src="https://dummyimage.com/100x100/c5c6c7/fff" alt="" />
+      <nav>
+        <ul class="menu">
+          <li class="itemMenu">Inicio</li>
+          <li class="itemMenu">Tienda</li>
+          <li class="itemMenu">Contacto</li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <section class="portada">
-            <h1>Mi web e-commerse</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero id asperiores, recusandae sed illum modi nisi necessitatibus unde quis excepturi accusamus</p>
-        </section>
-        <section class="contenedorCards">
-            <div class="product" data-price="10">
+      <section class="portada">
+        <h1>Tienda <span>Re</span>Think</h1>
+        <p>
+          El lugar donde puedes vender objetos de segunda mano o usados
+        </p>
+      </section>
+      <section class="contenedorCards">
+        <!-- <div class="product" data-price="10">
                 <h3>Producto 1</h3>
                 <img src="./img/imgPlano.png" alt="plano">
                 <button class="add-to-cart-btn">Agregar</button>
+            </div> -->
+        <article class="card product" style="width: 18rem">
+          <img src="..." class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="product-price">$</h5>
+            <p class="product-description">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+
+            <div class="container">
+              <button class="add-to-cart-btn">Agregar</button>
+              <div class="div-quantity">
+                <button class="quantity-minus">
+                    <i class="bx bx-minus"></i>
+                  </button>
+                  <p class="quantity">5</p>
+                  <button class="quantity-sum">
+                    <i class="bx bx-plus"></i>
+                  </button>
+              </div>
             </div>
-            <div class="product" data-price="20">
-                <h3>Producto 2</h3>
-                <img src="./img/imgPlano.png" alt="plano">
+          </div>
+        </article>
+
+        <article class="card product" style="width: 18rem">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="product-price">$</h5>
+              <p class="product-description">
+                Some quick example text to build on the card title and make up the
+                bulk of the card's content.
+              </p>
+  
+              <div class="container">
                 <button class="add-to-cart-btn">Agregar</button>
-            </div>
-            <div class="product" data-price="20">
-                <h3>Producto 2</h3>
-                <img src="./img/imgPlano.png" alt="plano">
-                <button class="add-to-cart-btn">Agregar</button>
-            </div>
-            <div class="product" data-price="20">
-                <h3>Producto 2</h3>
-                <img src="./img/imgPlano.png" alt="plano">
-                <button class="add-to-cart-btn">Agregar</button>
-            </div>
-        </section>
-        <section class="contenedorCarrito">
-            <div class="cart">
-                <h2>Carrito</h2>
-                <ul></ul>
-                <div>
-                    <button class="clear-cart-btn">Vaciar Carrito</button>
+                <div class="div-quantity">
+                  <button class="quantity-minus">
+                      <i class="bx bx-minus"></i>
+                    </button>
+                    <p class="quantity">5</p>
+                    <button class="quantity-sum">
+                      <i class="bx bx-plus"></i>
+                    </button>
                 </div>
+              </div>
             </div>
-        </section>
-        <div class="total">
-            <p>Total: <span class="total-price"> $0</span>Ars</p>
+          </article>
+
+          <article class="card product" style="width: 18rem">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="product-price">$</h5>
+              <p class="product-description">
+                Some quick example text to build on the card title and make up the
+                bulk of the card's content.
+              </p>
+  
+              <div class="container">
+                <button class="add-to-cart-btn">Agregar</button>
+                <div class="div-quantity">
+                  <button class="quantity-minus">
+                      <i class="bx bx-minus"></i>
+                    </button>
+                    <p class="quantity">5</p>
+                    <button class="quantity-sum">
+                      <i class="bx bx-plus"></i>
+                    </button>
+                </div>
+              </div>
+            </div>
+          </article>
+
+          <article class="card product" style="width: 18rem">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="product-price">$</h5>
+              <p class="product-description">
+                Some quick example text to build on the card title and make up the
+                bulk of the card's content.
+              </p>
+  
+              <div class="container">
+                <button class="add-to-cart-btn">Agregar</button>
+                <div class="div-quantity">
+                  <button class="quantity-minus">
+                      <i class="bx bx-minus"></i>
+                    </button>
+                    <p class="quantity">5</p>
+                    <button class="quantity-sum">
+                      <i class="bx bx-plus"></i>
+                    </button>
+                </div>
+              </div>
+            </div>
+          </article>
+      </section>
+      <section class="contenedorCarrito">
+        <div class="cart">
+          <h2>Carrito</h2>
+          <ul></ul>
+          <div>
+            <button class="clear-cart-btn">Vaciar Carrito</button>
+          </div>
         </div>
+      </section>
+      <div class="total">
+        <p>Total: <span class="total-price"> $0</span>Ars</p>
+      </div>
     </main>
     <footer>
-        <img src="https://dummyimage.com/100x100/c5c6c7/fff" alt="">
-        <div>
-            <a href=""><img src="https://dummyimage.com/50x50/c5c6c7/fff" alt=""></a>
-            <a href=""><img src="https://dummyimage.com/50x50/c5c6c7/fff" alt=""></a>
-            <a href=""><img src="https://dummyimage.com/50x50/c5c6c7/fff" alt=""></a>
-        </div>
+      <img src="https://dummyimage.com/100x100/c5c6c7/fff" alt="" />
+      <div>
+        <a href=""
+          ><img src="https://dummyimage.com/50x50/c5c6c7/fff" alt=""
+        /></a>
+        <a href=""
+          ><img src="https://dummyimage.com/50x50/c5c6c7/fff" alt=""
+        /></a>
+        <a href=""
+          ><img src="https://dummyimage.com/50x50/c5c6c7/fff" alt=""
+        /></a>
+      </div>
     </footer>
+
     <script src="./js/index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+  </body>
 </html>
